fixes and scrollbar for results page

--- a/src/FavouritesPage/Favourites.css
+++ b/src/FavouritesPage/Favourites.css
@@ -444,7 +444,8 @@
   margin-left: 2rem;
 }
 
-.arrow {
+
+.favourites .arrow {
   position: absolute;
   width: 13.889px;
   height: 14.84px;
