--- a/src/components/Search-Page/Search-page.css
+++ b/src/components/Search-Page/Search-page.css
@@ -437,7 +437,7 @@
   right: 2rem;
 }
 
-.arrow {
+.search-page .arrow {
   position: absolute;
   width: 13.889px;
   height: 14.84px;
